# GPIODroid

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sym/gpiodroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sym/gpiodroid/: ExampleUnitTest.java
gpiodroid/: build.gradle
gpiodroid/src/androidTest/java/com/sym/gpiodroid/: ExampleInstrumentedTest.kt
gpiodroid/src/main/cpp/: CMakeLists.txt  Logger.hpp  androidbuf.h  gpiodroid.cpp
gpiodroid/src/main/java/com/sym/gpiodroid/: GPIO.kt  gpiod.kt
gpiodroid/src/test/java/com/sym/gpiodroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libgpiodroid/: build.gradle
libgpiodroid/src/androidTest/java/com/sym/libgpiodroid/: ExampleInstrumentedTest.java
libgpiodroid/src/main/cpp/: CMakeLists.txt  libgpiodroid.cpp
libgpiodroid/src/main/java/com/sym/libgpiodroid/: NativeLib.kt
libgpiodroid/src/test/java/com/sym/libgpiodroid/: ExampleUnitTest.java
